--- a/web/templates/entry_forms/session.html
+++ b/web/templates/entry_forms/session.html
@@ -133,7 +133,7 @@
         </div>
 
         <!-- Service -->
-        <div class="form-row-full">
+        <div class="form-row-half">
             <div class="form-group">
                 <label for="service">Service *</label>
                 <input type="text" id="service" name="service" 
@@ -183,7 +183,8 @@
         <p class="help-text">Fees auto-populate from format selection but can be adjusted. Fill any two fields and the third calculates automatically.</p>
 
         <!-- Duration -->
-        <div class="form-row-full" style="margin-top: 1rem;">
+        <!-- Duration -->
+        <div class="form-row-half" style="margin-top: 1rem;">
             <div class="form-group">
                 <label for="duration">Session Duration (minutes) *</label>
                 <input type="number" id="duration" name="duration" 
